objects/AcctSeed__Tax_Group__c.object
<CustomObject>
    <description>Used to group related Tax Rate records.</description>
    <fields>
        <fullName>AcctSeed__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Combined_Tax_Rate__c</fullName>
        <description>Roll up summary of all the Tax Rate percentages of the child Tax Rate records.</description>
        <inlineHelpText>Roll up summary of all the Tax Rate percentages of the child Tax Rate records.</inlineHelpText>
        <label>Combined Tax Rate</label>
        <summarizedField>AcctSeed__Tax_Rate__c.AcctSeed__Tax_Rate__c</summarizedField>
        <summaryForeignKey>AcctSeed__Tax_Rate__c.AcctSeed__Tax_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__External_Id2__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Used to map the Tax Group to an external system such as the Accounting Seed Avalara VAT Reporting integration.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Reverse_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Designates whether the Payable Line (as well as the entire Payable) should create a reverse-charge accounting transaction. See Avalara VAT Reporting documentation for more information about how reverse-charge accounting works.</inlineHelpText>
        <label>Reverse-Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate_Count__c</fullName>
        <label>Tax Rate Count</label>
        <summaryForeignKey>AcctSeed__Tax_Rate__c.AcctSeed__Tax_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Type__c</fullName>
        <inlineHelpText>Select Sales for use on a Billing.  Select Purchase for use on a Payable.  Select Sales and Purchase for use on both.</inlineHelpText>
        <label>Tax Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Sales and Purchase</fullName>
                </value>
                <value>
                    <fullName>Purchases</fullName>
                    <isActive>false</isActive>
                    <label>Purchases</label>
                </value>
                <value>
                    <fullName>Sales and Purchases</fullName>
                    <isActive>false</isActive>
                    <label>Sales and Purchases</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax Group</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Tax_Type__c</columns>
        <columns>AcctSeed__Combined_Tax_Rate__c</columns>
        <columns>AcctSeed__Tax_Rate_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Purchase_Tax</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Tax_Type__c</columns>
        <columns>AcctSeed__Combined_Tax_Rate__c</columns>
        <columns>AcctSeed__Tax_Rate_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Tax_Type__c</field>
            <operation>equals</operation>
            <value>Purchase</value>
        </filters>
        <label>Purchase Tax</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Sales_Tax</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Tax_Type__c</columns>
        <columns>AcctSeed__Combined_Tax_Rate__c</columns>
        <columns>AcctSeed__Tax_Rate_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Tax_Type__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </filters>
        <label>Sales Tax</label>
    </listViews>
    <nameField>
        <label>Tax Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__ExternalIDNotEditable</fullName>
        <active>true</active>
        <description>The External ID field can only be set at the time of creation. It cannot be updated or modified.</description>
        <errorConditionFormula>AND ( 
NOT(ISNEW()),
ISCHANGED(AcctSeed__External_Id2__c)
)</errorConditionFormula>
        <errorDisplayField>AcctSeed__External_Id2__c</errorDisplayField>
        <errorMessage>The External ID field can only be set at the time of creation. It cannot be updated or modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__ReverseChargeNotAllowedIfExternalIDBlank</fullName>
        <active>true</active>
        <description>Reverse-Charge is not allowed to be checked if the External ID field is blank.</description>
        <errorConditionFormula>AND(
ISBLANK(AcctSeed__External_Id2__c),
AcctSeed__Reverse_Charge__c = true)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Reverse_Charge__c</errorDisplayField>
        <errorMessage>Reverse-Charge is not allowed to be checked if the External ID field is blank.</errorMessage>
    </validationRules>
</CustomObject>